hphp/test/zend/good/ext/pdo/tests/bug_44159.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('pdo')) die('skip PDO not available');
}
